[package]
name       = "tendermint-p2p"
version    = "0.19.0"
edition    = "2018"
license    = "Apache-2.0"
repository = "https://github.com/informalsystems/tendermint-rs"
readme     = "README.md"
keywords   = ["p2p", "tendermint", "cosmos"]
authors    = [
  "Tony Arcieri <tony@iqlusion.io>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>"
]

description = """
    The Tendermint P2P stack.
    """

[dependencies]
chacha20poly1305 = "0.10.1"
ed25519-dalek = { git = "https://github.com/FindoraNetwork/ed25519-dalek", tag = "v1.0.1-f", features = ["serde"] }
eyre = "0.6"
hkdf = "0.12.3"
merlin = "3"
prost = "0.11"
rand_core = { version = "0.5", features = ["std"] }
sha2 = "0.10"
subtle = "2"
subtle-encoding = { version = "0.5" }
thiserror = "1"
x25519-dalek = "1.1"
zeroize = "1"

# path dependencies
tendermint = { path = "../tendermint", version = "0.19.0" }
tendermint-proto = { path = "../proto", version = "0.19.0" }

# optional dependencies
prost-amino = { version = "0.6", optional = true }
prost-amino-derive = { version = "0.6", optional = true }

[dev-dependencies]
pipe = { version = "0", features = ["bidirectional"] }

[features]
amino = ["prost-amino", "prost-amino-derive"]
