[package]
name       = "tendermint"
version    = "0.19.0" # Also update `html_root_url` in lib.rs and
                      # depending crates (rpc, light-node, ..) when bumping this
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/informalsystems/tendermint-rs/tree/master/tendermint"
readme     = "../README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
edition    = "2021"

description = """
    Tendermint is a high-performance blockchain consensus engine that powers
    Byzantine fault tolerant applications written in any programming language.
    This crate provides core types for representing information about Tendermint
    blockchain networks, including chain information types, secret connections,
    and remote procedure calls (JSON-RPC).
    """

authors = [
    "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
    "ValarDragon <dojha12@gmail.com>",
    "Tony Arcieri <tony@iqlusion.io>",
    "Thane Thomson <thane@informal.systems>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anomaly = { git = "https://github.com/FindoraNetwork/anomaly.git", branch = "main" }
async-trait = "0.1"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519 = "1"
ed25519-dalek = { git = "https://github.com/FindoraNetwork/ed25519-dalek", tag = "v1.0.1-f", features = ["serde"] }
# TODO(thane): Remove once https://github.com/myrrlyn/funty/issues/3 is fixed
funty = "=1.1.0"
futures = "0.3"
num-traits = "0.2"
once_cell = "1.3"
prost = "0.11"
prost-types = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
serde_repr = "0.1"
sha2 = { version = "0.10", default-features = false }
signature = "1.2"
subtle = "2"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
thiserror = "1"
tendermint-proto = { version = "0.19.0", path = "../proto" }
toml = { version = "0.5" }
url = { version = "2.2" }
zeroize = { version = "1.1", features = ["zeroize_derive"] }

k256 = { version = "0.11.6", optional = true, features = ["ecdsa"] }
ripemd = { version = "0.1", optional = true }

[features]
secp256k1 = ["k256", "ripemd"]

[dev-dependencies]
proptest = "1.0.0"
tendermint-pbt-gen = { path = "../pbt-gen" }
